--- a/app/src/main/res/layout/fragment_trip_detail.xml
+++ b/app/src/main/res/layout/fragment_trip_detail.xml
@@ -358,6 +358,15 @@
                     app:drawableStartCompat="@drawable/ic_airplane" />
 
                 <LinearLayout
+                    android:id="@+id/ll_new_flight"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:orientation="vertical"
+                    />
+
+                <LinearLayout
                     android:id="@+id/ll_flights_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -441,6 +450,15 @@
                     app:drawableStartCompat="@drawable/ic_hotels" />
 
                 <LinearLayout
+                    android:id="@+id/ll_new_hotel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:orientation="vertical"
+                    />
+
+                <LinearLayout
                     android:id="@+id/ll_hotels_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -492,6 +510,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_activities"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/bright_blue"
@@ -521,6 +540,15 @@
                     android:textSize="16sp"
                     android:drawablePadding="10dp"
                     app:drawableStartCompat="@drawable/ic_activities" />
+
+                <LinearLayout
+                    android:id="@+id/ll_new_activity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:orientation="vertical"
+                    />
 
                 <LinearLayout
                     android:id="@+id/ll_activities_detail"
