--- a/app/src/main/res/layout/layout_trip_flights.xml
+++ b/app/src/main/res/layout/layout_trip_flights.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg_form">
@@ -187,6 +189,7 @@
         />
 
     <FrameLayout
+        android:id="@+id/tv_remove_flight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FBEAE9"
