--- a/app/src/main/res/layout/layout_trip_hotels.xml
+++ b/app/src/main/res/layout/layout_trip_hotels.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -137,7 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:drawableStartCompat="@drawable/ic_calendar"
-            tools:text="In: 24-02-2024"
+            android:text="In: 24-02-2024"
             android:layout_marginStart="16dp"
             android:drawablePadding="4dp"
             android:layout_marginTop="6dp"
@@ -151,7 +152,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_calendar"
-            tools:text="Out: 24-02-2024"
+            android:text="Out: 24-02-2024"
             android:layout_marginStart="16dp"
             android:drawablePadding="4dp"
             android:layout_marginTop="6dp"
@@ -238,6 +239,7 @@
         />
 
     <FrameLayout
+        android:id="@+id/tv_remove_hotel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FBEAE9"
